--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 11 15:51:00 CET 2019
-sdk.dir=/home/romain/Android/Sdk
+#Mon Mar 11 16:52:46 CET 2019
+sdk.dir=C\:\\Users\\Gabriel\\AppData\\Local\\Android\\Sdk
