--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,25 @@
         tools:ignore="ExtraText,GoogleAppIndexingWarning">
 
         <activity
-            android:name=".remote_results"
-            android:label="@string/title_activity_remote_results"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".local_results"
-            android:label="@string/title_activity_local_results"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".remote_results"
+            android:label="@string/title_activity_remote_results"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".local_results"
+            android:label="@string/title_activity_local_results"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
